# udon-c

./: .gitignore  AUTHORS  ChangeLog  INSTALL  NEWS  NOTES.md  README  TODO.md  configure.ac  prepare
docs/: DECIDED.md  NOTES.md  TODO.md
lib/: Makefile.am  hsearch.h  hsearch_r.c  udon.c  udon.h  udon.machine  udon2.machine  udon_parsing.h
lib/.attic/: hsearch.c  hsearch_r.c  udon.h  udon2.h  udon_parsing.h
lib/templates/: genmachine  genmachine.vim  genmachine2.rb  genmachine3.rb  machine-private-template.h  machine-public-template.h  machine-template.h  make-udon-parser  node.c  parser.c  parser.h  parser_private.h  parser_public.h  udon.machine  udon2.machine  udon3.machine
src/: Makefile.am  udon.c  udon2xml.c  udon_introspect.c
test/: doc.udon
